# rl25_homework_3

./: 3001_gz_my_quadrotor  CMakeLists.txt  README.md  dds_topics.yaml
aerial_robotics/: README.md  docker_build_image.sh  docker_connect.sh  docker_run_container.sh
aerial_robotics/build_files/: Dockerfile
aerial_robotics/ros2_ws/heart_trajectory/: heart_trajectory_0.db3  metadata.yaml
aerial_robotics/ros2_ws/proof_flight/: metadata.yaml  proof_flight_0.db3
aerial_robotics/ros2_ws/src/force_land/: CMakeLists.txt  package.xml  setup.py
aerial_robotics/ros2_ws/src/force_land/launch/: force_land.launch.py
aerial_robotics/ros2_ws/src/force_land/src/: force_land_node.cpp
aerial_robotics/ros2_ws/src/offboard_rl/src/: go_to_point.cpp
my_quadrotor/: model.config  model.sdf
